[gd_scene format=3 uid="uid://dun72lm0syynn"]

[ext_resource type="Theme" uid="uid://3q7s11gs73j1" path="res://resources/themes/nox.tres" id="1_epr8r"]
[ext_resource type="Script" uid="uid://xl8v0q181bdw" path="res://interface/components/chat/video_player.gd" id="2_88oqt"]
[ext_resource type="Texture2D" uid="uid://qdrusckdd544" path="res://icons/playArrow.png" id="2_c6lu5"]
[ext_resource type="Texture2D" uid="uid://dv6n7dtd1pkl6" path="res://icons/volumeUp.png" id="3_88oqt"]

[node name="VideoPlayer" type="VBoxContainer" unique_id=1072541983]
offset_right = 559.0
offset_bottom = 290.0
theme = ExtResource("1_epr8r")
script = ExtResource("2_88oqt")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="." unique_id=2052123426]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
buffering_msec = 1000

[node name="Timeline" type="HSlider" parent="." unique_id=1435715986]
unique_name_in_owner = true
layout_mode = 2
step = 0.01
value = 16.0

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1658962047]
layout_mode = 2

[node name="Time" type="Label" parent="HBoxContainer" unique_id=240567433]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0:00"

[node name="PausePlay" type="Button" parent="HBoxContainer" unique_id=728197280]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_c6lu5")

[node name="VolumeButton" type="Button" parent="HBoxContainer" unique_id=622248254]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_88oqt")

[node name="VolumeContainer" type="PanelContainer" parent="HBoxContainer/VolumeButton" unique_id=1554676261]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_top = -120.0
offset_right = 40.0
pivot_offset_ratio = Vector2(0, 1)
theme_type_variation = &"PanelSolid"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VolumeButton/VolumeContainer" unique_id=2094897151]
layout_mode = 2

[node name="VolumeSlider" type="VSlider" parent="HBoxContainer/VolumeButton/VolumeContainer/MarginContainer" unique_id=1514263380]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Length" type="Label" parent="HBoxContainer" unique_id=309570167]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0:00"
horizontal_alignment = 2

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="gui_input" from="VideoStreamPlayer" to="." method="_on_video_stream_player_gui_input"]
[connection signal="value_changed" from="Timeline" to="." method="_on_timeline_value_changed"]
[connection signal="pressed" from="HBoxContainer/PausePlay" to="." method="_on_pause_play_pressed"]
[connection signal="pressed" from="HBoxContainer/VolumeButton" to="." method="_on_volume_button_pressed"]
[connection signal="value_changed" from="HBoxContainer/VolumeButton/VolumeContainer/MarginContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
